guition-p4-rev1.3-4.3/v0.96.01/README_kr.md
# StajPilot v0.96.01 — Guition JC4880P443C_I_W

> **2026-08-29 업데이트**: 송 모드 텍스트에서 이탈리아어, 독일어, 스페인어,
> 포르투갈어에서 쓰이는 악센트 문자(ñ, á, ü 등)가 이제 정상적으로 표시됩니다 -
> 이전에는 빈 사각형으로 나왔습니다. 버전은 그대로 v0.96.01이고,
> 아래 바이너리에 이 수정사항이 반영되어 있습니다.

이제 v0.95.00을 대체하는 정식 안정 버전입니다. v0.96.00-beta/v0.96.01-beta
과정에서 쌓인 내용을 전부 포함하며, USB 호스트 모드도 포함되어 있습니다 — 이
기능의 현재 검증 수준은 아래 "알려진 제한사항"을 참고하세요.

## v0.96.00-beta 이후 달라진 점

- **DEVICE → HOST 양방향 지원** — 호스트 포트에 연결된 하위 MIDI 기기가 보내는
  응답도 이제 켐퍼 플레이어로 그대로 전달됩니다 (필터링 없이 기기가 보내는 걸 모두
  전달 — 일반적인 MIDI THRU 방식과 동일). 이전에는 이 방향은 아예 버려졌습니다.
- **파인튠(FINE-TUNE) 모드 (신규)** — 설정의 **FINE-TUNE** 체크박스로 튜너 바를
  실제 소수점 단위 정밀도로 바꿀 수 있습니다 (단순히 표시만 정밀해 보이는 게
  아니라, 내부적으로 편차 값 자체를 센트 단위 소수로 유지합니다). 정확(녹색)/
  근접(노랑)/벗어남(빨강·파랑) 3단계 색상으로 표시됩니다.
- **릭 전환 응답성 향상** — 보드에서 릭이나 뱅크를 터치했을 때, 켐퍼 플레이어의 확인 응답
  전에 화면 상태를 먼저 갱신하지 않도록 바꿨습니다. 이 때문에 전환할 때마다
  디테일 요청이 중복으로 나가고 있었습니다. 이제는 켐퍼 플레이어의 확인 응답을 기다린
  뒤에 릭 디테일을 요청합니다 — 화면 갱신은 아주 살짝 늦어지지만, 켐퍼 플레이어에 걸리는
  부하가 눈에 띄게 줄고 전반적인 반응이 더 매끄러워졌습니다.
- **모프 표시기 다듬음** — 시각 디자인 개선, CPU 사용 버그 수정(값이 안 바뀌어도
  폴링 응답마다 불필요한 재렌더링을 하고 있었음), 렌더링 버그 수정(표시기 채움
  방향이 바뀔 때 잔상이 남던 문제).
- **블루투스 "MIDI 전용" 필터 (신규)** — 블루투스 화면의 체크박스로 스캔 목록을
  BLE-MIDI를 광고하는 기기만 보이게 좁힐 수 있습니다 (MIDI 서비스를 제대로
  광고하지 않는 풋컨트롤러를 위한 이름 기반 예외 처리 포함). 기본값은 꺼짐.
- **블루투스 연결 대수 표시 (신규)** — 설정 버튼 위 작은 바가 현재 연결된 BLE
  MIDI 기기 수만큼 채워집니다.

## v0.96.00-beta에서 추가된 기능 (계속 포함됨)

아래 내용은 모두 v0.95.00 이후로 쌓인 변경사항입니다.

- **뱅크 전환 스와이프** — 릭 이름 아래부터 화면 하단까지 좌우로 스와이프해서
  이전/다음 뱅크로 이동할 수 있습니다. 기존의 `</>` 전용 버튼 대신이라, 슬롯
  버튼을 더 크게 쓸 수 있게 됐습니다. 설정 화면의 **SWIPE NAV** 체크박스로
  끄면 예전 버튼 방식으로 돌아갑니다 — 어느 쪽을 선택해도 기능은 그대로 유지됩니다.
- **슬롯 라벨 두 번째 줄 ("sub swipe")** — SWIPE NAV가 켜져 있을 때, 각 슬롯 버튼에
  기존 5자짜리 짧은 라벨 대신 최대 12자짜리 긴 보조 라벨을 표시할 수 있습니다.
  스와이프 모드가 여유 공간을 만들어주기 때문입니다. 웹 설정 페이지에서 슬롯별로
  설정하며, 비워두면 자동으로 기존 짧은 라벨로 대체됩니다.
- **MIDI CHANNEL 조작 방식 변경** — 스크롤 롤러에서 BOX/FIXED FX와 같은 드롭다운
  방식으로 바뀌었습니다.
- **웹 설정 페이지**: 곡/슬롯 편집기의 열 너비가 글자 수에 맞춰 자동으로 조정되고,
  라벨/문구도 몇 군데 다듬었습니다.
- **USB 호스트 모드** — 보드의 Full-Speed USB-C 포트가 USB MIDI **호스트**
  역할을 할 수 있어서, 켐퍼 플레이어의 USB-B 디바이스 포트에 직접 연결할 수 있습니다.
  이 기능은 다른 USB MIDI 기기를 보드에 연결할 수 있도록 개발됐으며, 단방향
  (송신 전용) 기기와 양방향(송수신) 기기를 모두 지원합니다. **USB MODE**
  페이지(대기 화면 또는 설정 화면에서 접근 가능)에서 고를 수 있는 세 가지
  모드가 있고, 전원을 켤 때 한 번 고정됩니다:
  - **DEVICE** (기존/기본 동작) — High-Speed 포트가 USB MIDI 디바이스로,
    켐퍼 플레이어의 USB-A 호스트 포트에 연결.
  - **HOST** — Full-Speed 포트가 USB MIDI 호스트로, 켐퍼 플레이어의 USB-B 디바이스 포트에
    연결. 켐퍼 플레이어 자체의 USB-A 호스트 포트를 실제 풋컨트롤러용으로 비워줄 수 있습니다.
  - **DEVICE → HOST** — 두 가지를 동시에: High-Speed 포트에서 켐퍼 플레이어로부터 디바이스로
    수신해서 Full-Speed 호스트 포트로 연결된 다른 MIDI 기기에 전달하고, (이번
    버전부터 새로) 그 기기가 보내는 응답도 켐퍼 플레이어로 다시 전달합니다.

  모드를 바꾸면 설정만 저장됩니다 — 다음 전원을 켤 때 적용되며, 동작 중에 실시간으로
  전환되지 않습니다.
- **모프 위치 표시기** — 큰 뱅크/릭 번호 옆에 켐퍼 플레이어의 모프 페달 위치를
  실시간으로 보여주는 작은 표시기입니다. 값이 안 바뀔 땐 기본적으로 숨겨져 있고,
  실제로 값이 바뀔 때만 나타나서 화면을 어지럽히지 않습니다. **MORPH**
  설정(None / Slow / Med / Fast)으로 확인 주기를 조절할 수 있으며 — 모프를
  사용하지 않고 추가 MIDI 트래픽도 원하지 않는다면 None으로 두면 폴링 자체가
  꺼집니다.

  **참고:** 이 기능은 타이머로 켐퍼 플레이어에 주기적으로 값을 물어보는 방식으로 동작합니다
  (Slow / Med / Fast) — 값이 안 바뀌어도 약간의 MIDI 트래픽이
  계속 발생하며, 속도를 높일수록 폴링이 더 자주 일어납니다. 모프 페달을 실제로
  사용하면서 화면으로 위치를 직접 확인하고 싶은 경우가 아니라면 **None**으로
  두는 걸 권장합니다.

## 알려진 제한사항

- USB 호스트 모드는 비교적 새로 추가된 기능이라, 기존 v0.95.00부터 변경 없이
  그대로 작동하는 Device 모드 켐퍼 플레이어 연결에 비해 실사용 검증이 상대적으로
  부족합니다. 어떤 USB 모드를 선택하든 기존 Device 모드 연결 자체는 그대로
  작동합니다.
- DEVICE → HOST 전달은 (양방향 모두) 메시지 필터링이 없습니다 — 오가는 내용을
  그대로 전부 전달합니다.
- HOST 모드는 MIDI 클래스 USB 기기를 인식하는 방식이며, 개발 중 사용 가능했던
  기기 외의 모든 USB MIDI 기기로 테스트되지는 않았습니다.
- 다른 양방향 MIDI 컨트롤러와의 연결 안정성은 계속 테스트 중입니다 — 기기에
  따라 동작이 다를 수 있습니다.

## 파일

- `stajpilot_v0.96.01_JC4880P443C_I_W_update_firmware.bin` — 앱만
  업데이트합니다. 이미 정상 작동하는 기기가 있다면 이걸 사용하세요 — 곡 목록,
  WiFi 설정 등 저장된 내용이 그대로 유지됩니다.
- `stajpilot_v0.96.01_JC4880P443C_I_W_factory_merged.bin` — 전체 이미지
  (부트로더 + 파티션 테이블 + 앱). 최초 설치나 완전 복구 시에만 사용하세요 —
  **저장된 곡/WiFi 설정이 모두 지워집니다.**

## 설치 방법

**가장 쉬운 방법: 브라우저에서 바로 플래시** — 별도 소프트웨어 설치 없이,
데스크톱 컴퓨터의 Chrome 또는 Edge에서 진행할 수 있습니다:

### 👉 [stajd.github.io](https://stajd.github.io/)

목록에서 "Guition JC4880P4"를 선택하고 화면에 나오는 안내를 따라가세요 —
보드를 업로드 모드로 진입시키는 방법까지 전부 안내됩니다.

## 플래시: 일반 업데이트 (곡/WiFi 설정 유지)

```
esptool.py --chip esp32p4 --port <PORT> --baud 460800 \
  write_flash 0x10000 stajpilot_v0.96.01_JC4880P443C_I_W_update_firmware.bin
```

플래시 오프셋 `0x10000`. 파티션 테이블을 쓰지 않고, SPIFFS/NVS도 포맷하지 않습니다.

## 플래시: 최초 설치 / 복구 (SPIFFS + NVS 초기화)

```
esptool.py --chip esp32p4 --port <PORT> --baud 460800 \
  write_flash 0x0 stajpilot_v0.96.01_JC4880P443C_I_W_factory_merged.bin
```

플래시 오프셋 `0x0`. 부트로더는 `0x2000`, 파티션 테이블은 `0x8000`, 앱은
`0x10000`에 위치하며 하나로 병합된 이미지입니다. 최초 설치/복구 시에만 사용하세요.
